--- a/client/templates/user.html
+++ b/client/templates/user.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-  {{> utilisateur}}
+ {{username}}
 </body>
 
 
@@ -13,6 +13,6 @@
 
 
 <template name="utilisateur">
- 
+
 </template>
 
