remove this fail js

--- a/client/templates/user.html
+++ b/client/templates/user.html
@@ -6,8 +6,8 @@
 <body>
 	<div class="row">
 		<ul class="col-md-3">
-			<li>{{nom}}{{#if isOwner}}<button class="delete">&times;</button>{{/if}}</li>
-			<li>{{mail}}{{#if isOwner}}<button class="delete">&times;</button>{{/if}}</li>
+			<li>{{nom}}</li>
+			<li>{{mail}}</li>
 		</ul>
 	</div>
 
