--- a/client/templates/user.html
+++ b/client/templates/user.html
@@ -4,13 +4,14 @@
 </head>
 
 <body>
-	<div class="row">
-		<ul class="col-md-3">
-			<li>{{nom}}</li>
-			<li>{{mail}}</li>
-		</ul>
+	<div class="container">
+		<div class="row">
+			<ul class="col-md-3">
+				<li>{{nom}}</li>
+				<li>{{mail}}</li>
+			</ul>
+		</div>
 	</div>
-
 </body>
 <!-- PAGE DE PROFIL D'un contact -->
 
