--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,13 +1,12 @@
 <template name="Home">
 <head>
   <title>Répertoire de contacts</title>
+  <meta name="viewport" content="width=device-width"/>
 </head>
 
 <body>
   <div class="container">
     {{> hello}}
- 
-    {{> ajout}}
 
     <!-- si l'user est connecté on affiche sa liste -->
     {{#if currentUser}}
@@ -26,21 +25,33 @@
 
 <template name="hello">
  
- <div class="row">
-  <h1 class="text-center">Répertoire de contacts</h1>
+ 
+  <h1 class="text-center first-title">Répertoire de contacts</h1>
   <div class="login btn btn-primary">{{> loginButtons}}</div>
-  <a href="#">Ajouter un contact</a>
-  
- </div>
+  <div class="row">
+    <div class="col-md-11 title">
+      <h1>Contact</h1>
+      {{> ajout}}
+      <hr>
+    </div>
+  </div>
 </template>
 
 <template name="ajout">
 	<!-- ajout d'un contact -->
-  <form class="new-contact">
-    <input required type="text" name="nom" placeholder="NOM" />
-    <input required type="email" name="mail" placeholder="MAIL" />
-     <input type="submit" value="Submit">
-  </form>
+  <div class="dropdown pull-right">
+    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+      Ajouter un contact
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+      <form class="new-contact">
+      <li role="presentation"><label>Nom</label><input required type="text" name="nom" placeholder="NOM" /></li>
+      <li role="presentation"><label>Mail</label><input required type="email" name="mail" placeholder="MAIL" /></li>
+      <li role="presentation"><input class="btn btn-success" type="submit" value="Submit"></li>
+      </form>
+    </ul>
+  </div>
 </template>
 
 <template name="searchBox">
