--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -86,8 +86,21 @@
           Mail :  {{mail}}
         </div>
       </a>
-      <button class="delete">&times;</button>
-    </div>  
+      <button class="areUSure" data-toggle="modal" data-target="#myModal">&times;</button>
+    </div> 
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel">Voulez-vous vraiment supprimer ce contact ?</h4>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success close delete" data-dismiss="modal"  aria-label="Close">Oui</button>
+            <button type="button" class="btn btn-danger close" data-dismiss="modal">Non</button>
+          </div>
+        </div>
+      </div>
+    </div> 
      {{/each}}
    </div>
   {{else}}
