test delete only one info

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -120,7 +120,7 @@
               <li>{{prenom}}</li>
               <li>{{tel}}</li>
               <li>{{adress}}</li>
-              <li>{{mail}}</li>
+              <li>{{mail}}</li><button class="deleteMail">&times;</button>
             </ul>
           </div>
           <div class="modal-footer">
