--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,26 +1,26 @@
-<template name="Home">
+
 <head>
   <title>Répertoire de contacts</title>
   <meta name="viewport" content="width=device-width"/>
 </head>
 
-<body>
-  <div class="container">
-    {{> hello}}
+<template name="Home">
+
+  <body>
+    <div class="container">
+      {{> hello}}
 
 
 
-    <!-- si l'user est connecté on affiche sa liste -->
-    {{#if currentUser}}
-    {{> liste}}
-    {{/if}}
+      <!-- si l'user est connecté on affiche sa liste -->
+      {{#if currentUser}}
+      {{> liste}}
+      {{/if}}
 
+      
+    </div>
     
-  </div>
-  
-</body>
-
-
+  </body>
 
 </template>
 
@@ -72,6 +72,7 @@
     </div>
   </div>
     <ul class="row">
+     <!--  resultat research instant -->
         {{#esEach index="contacts"}}
             <li class="col-md-6"><a class="thisContact" href="#" data-toggle="modal" data-target="#{{_id}}"><div>{{nom}}</div></a></li>
         {{/esEach}}
@@ -87,7 +88,19 @@
   {{#if contact}} <!-- si il a des contacts -->
   <div class="row list">
     {{#each contact}} 
-    <div class="col-md-6">
+      {{>contacts}} 
+    {{/each}}
+   </div>
+  {{else}}
+  Vous n'avez pas de contacts
+  {{/if}}
+
+  
+</template>
+
+<template name="contacts">
+
+<div class="col-md-6">
       <a class="thisContact" href="#" data-toggle="modal" data-target="#{{_id}}"> 
         <div>
           {{nom}}
@@ -107,7 +120,11 @@
           </div>
         </div>
       </div>
-    </div> 
+    </div>
+
+    <!-- Pop up info du contact  -->
+
+
     <div class="modal fade" id="{{_id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -116,12 +133,21 @@
           </div>
           <div class="modal-body">
             <ul>
-              <li>{{nom}}</li>
-              <li>{{prenom}}</li>
-              <li>{{tel}}</li>
-              <li>{{adress}}</li>
-              <li>{{mail}}</li>
+              {{#if update}}
+                <!-- Si on a cliqué sur update on met le formulaire d'update -->
+               {{>formodif}}
+              {{else}}
+                <li>Nom : {{nom}}</li>
+                <li>Prénom : {{prenom}}</li>
+                <li>Téléphone : {{tel}}</li>
+                <li>Adresse : {{adress}}</li>
+                <li>Mail : {{mail}}</li>
+                <button id='update'>Modifier</button>  
+              {{/if}}
+              
             </ul>
+           
+
           </div>
           <div class="modal-footer">
             
@@ -129,18 +155,22 @@
         </div>
       </div>
     </div>
-     {{/each}}
-   </div>
-  {{else}}
-  Vous n'avez pas de contacts
-  {{/if}}
-
-  
-</template>
-
-<template name="user">
-
-<!-- PAGE DE PROFIL D'un contact -->
-
 
 </template>
+
+<!-- formulaire modif contact -->
+<template name="formodif">
+
+  <form class="modif" id="{{_id}}">
+    <li>Nom : <input required type="text" name="nom" value="{{nom}}" /></li>
+    <li>Prénom : <input  type="text" name="prenom" value="{{prenom}}" /></li>
+    <li>Téléphone : <input  type="tel" name="tel" value="{{tel}}" /></li>
+    <li>Adresse : <input  type="text" name="adress" value="{{adress}}" /></li>
+    <li>Mail : <input  type="email" name="mail" value="{{mail}}" /></li>
+    <button type="submit" value='Submit' >Valider</button>
+    <button id="endUpdate" >Annuler</button>
+    <button >dadada</button>
+  </form>
+
+</template>
+
