--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -167,9 +167,9 @@
     <li>Téléphone : <input  type="tel" name="tel" value="{{tel}}" /></li>
     <li>Adresse : <input  type="text" name="adress" value="{{adress}}" /></li>
     <li>Mail : <input  type="email" name="mail" value="{{mail}}" /></li>
-    <button type="submit" value='Submit' >Valider</button>
-    <button id="endUpdate" >Annuler</button>
-    <button >dadada</button>
+    <input type="submit" value='Submit' />
+<!--     <button id="endUpdate" >Annuler</button>
+<button >dadada</button> -->
   </form>
 
 </template>
