on peut modifier

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -167,7 +167,7 @@
     <li>Téléphone : <input  type="tel" name="tel" value="{{tel}}" /></li>
     <li>Adresse : <input  type="text" name="adress" value="{{adress}}" /></li>
     <li>Mail : <input  type="email" name="mail" value="{{mail}}" /></li>
-    <input type="submit" value='Submit' />
+    <button type="submit" value='Submit' >Valider</button>
 <!--     <button id="endUpdate" >Annuler</button>
 <button >dadada</button> -->
   </form>
