--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -142,7 +142,7 @@
                 <li>Téléphone : {{tel}}</li>
                 <li>Adresse : {{adress}}</li>
                 <li>Mail : {{mail}}</li>
-                <button id='update'>Modifier</button>  
+                <button class="btn btn-primary mt-10" id='update'>Modifier</button>  
               {{/if}}
               
             </ul>
@@ -167,7 +167,7 @@
     <li>Téléphone : <input  type="tel" name="tel" value="{{tel}}" /></li>
     <li>Adresse : <input  type="text" name="adress" value="{{adress}}" /></li>
     <li>Mail : <input  type="email" name="mail" value="{{mail}}" /></li>
-    <button type="submit" value='Submit' >Valider</button>
+    <button class="btn btn-success mt-10" type="submit" value='Submit' >Valider</button>
   </form>
 
 </template>
